--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 
     <style type="text/css">
 
+        div.main_menu{
+            position: fixed;
+            visibility: visible;
+            z-index: 2;
+            background-color: #7f7f7f; 
+            height: 40px;
+            top:5px;
+            width: inherit;
+        }
+
        div.menu2{
            background-color: #fff;
            visibility: hidden;
@@ -53,7 +63,7 @@
 
     </div>
 
-    <button style="position: fixed;top: 10%;" onclick="myFunction()">Try it</button>
+    <button style=" margin-top: 30%;" onclick="myFunction()">Click</button>
 
 </div>
 
