--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     
     </div>
 
-    <div class="navgn_panel"></div>
+    <div class="navgn_panel"><input id="details" type="text" value="hello"></input></div>
 
     <button style=" margin-top: 0px;" onclick="myFunction()">Click</button>
 
