--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
     
     </div>
 
-    <div class="navgn_panel"><input id="details" type="text" value="hello"></input></div>
+    <div class="navgn_panel"></div>
+    
+    <div style="position: sticky; top:10px;">
+    <input id="details" type="text" value="hello"></input></br><input id="details2" type="text" value="hello"></input>
+    </div>
 
     <button style=" margin-top: 0px;" onclick="myFunction()">Click</button>
 
