--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 <head>
 
     <meta charset="utf-8">
+
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Prasurjya Rohan Saikia">
 
     <title>index</title>
+
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
     <script src="animatn.js"></script>
     <link rel="stylesheet" type="text/css" href="index_styling.css"/>
@@ -67,10 +74,11 @@
     
     </div>
 
-    <div class="navgn_panel"></div>
+    <div class="navgn_panel navgn_panel_d navgn_panel_m"></div>
     
     <div style="position: sticky; top:10px;">
-    <input id="details" type="text" value="hello"></input></br><input id="details2" type="text" value="hello"></input>
+    <input id="details" type="text" value="hello"></input></br><input id="details2" type="text" value="hello"></input></br>
+    <p id="demo" style="color: darkorange;"></p>
     </div>
 
     <button style=" margin-top: 0px;" onclick="myFunction()">Click</button>
