refined_mobile_view

--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
     <div class="navgn_panel navgn_panel_d navgn_panel_m"></div>
     
     <div style="position: sticky; top:10px;">
-    <input id="details" type="text" value="hello"></input></br><input id="details2" type="text" value="hello"></input></br>
-    <p id="demo" style="color: darkorange;"></p>
+    <input id="details" type="text" value="hello"></input></br>
     </div>
 
     <button style=" margin-top: 0px;" onclick="myFunction()">Click</button>
