refined_mobile_view2

--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
 
     <div class="navgn_panel navgn_panel_d navgn_panel_m"></div>
     
-    <div style="position: sticky; top:10px;">
+    <!-- <div style="position: sticky; top:10px;">
     <input id="details" type="text" value="hello"></input></br>
-    </div>
+    </div> -->
 
+    
     <button style=" margin-top: 0px;" onclick="myFunction()">Click</button>
 
 </div>
