latest_refinements_of_brandings_final

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="gear_logo gear_logo_d gear_logo_m">
             
-            <img class="gear1 gear1_m gear1_d" src="gear.png"></img>
+            <img class="gear1 gear1_m gear1_d" src="gear1.png"></img>
             <img class="gear2 gear2_m gear2_d" src="gear2.png"></img>
             
             <div class="brand brand_d brand_m">
