--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
     </div>
 
-    <div class="navgn_panel navgn_panel_d navgn_panel_m">
+    <div class="navgn_panel navgn_panel_d navgn_panel_m"></div>
        
     </div>
 
